--- a/css/booktubers.css
+++ b/css/booktubers.css
@@ -6,13 +6,12 @@ body{
 .slide-logo h1{
   color:#7401DF;
 }
-.slide-logo{
-  width: 60%;
-}
 .lbla{
   color:#ffffff;
 }
-
+.slide-logo {
+  width: 100%;
+}
 .texto-intr{
   width: 100%;
   margin: auto;
@@ -44,8 +43,9 @@ body{
     color: #503882;
     text-align: justify;
     margin: auto;
-    padding: 15px;
+    padding: 8px;
     letter-spacing: 1px;
+    line-height: 1.2;
   	}
 .txt-como li ul li{
   font-size: 1em;
@@ -76,7 +76,7 @@ body{
   float: left;
   line-height: 1.2em;
   display: inline;
-  margin: 30px 10px 0 0;
+  margin: 20px 10px 0 0;
 }
 
 .comop{
@@ -156,7 +156,7 @@ margin: auto;
   color: #503882;
   padding: 30px;
   text-align: center;
-  display: none;
+
 }
 .query {
   margin: auto;
@@ -239,13 +239,43 @@ margin-right: -20px;
 .cont-princ{
   position: relative;
 }
-@media (max-width: 320px){
+.btn-crea{
+margin-left: 48%;
+float: left;
+}
+.img-logo-b{
+  float: left;
+margin-left: 20%;
+}
+@media (max-width: 425px){
 #homeSlider .sltext {
   display: none;
-  /*style="background: url('images/recursos/LibrosSFdo.png'); background-repeat: no-repeat;background-position: center;*/
-}}
+}
+.texto-intr li {
+  float: left;
+  width: 100%;
+  margin: auto;
+margin-left: 45px;
+}
+.img-logo-b {
+    margin-top: 0;
+}
+.cont-princ{
+  text-align: center;
+    margin-top: 46%;
+}
+.carousel-indicators .active{
+  display: none;
+}
+.texto-intr{
+      margin-left: 24px;
+}
+}
 @media (min-width: 2560px){
   .img-princ{
     left: 18%;
   }
+}
+@media (min-width: 2560px){
+
 }
