--- a/css/booktubers.css
+++ b/css/booktubers.css
@@ -61,7 +61,6 @@ body{
 .txt_bases{
   font-size: 1.2em;
   letter-spacing: 1px;
-  text-align: justify;
   margin: auto;
 }
 .txt_bases ul{
@@ -74,9 +73,9 @@ body{
 .txt_bases ul li {
   width: 100%;
   float: left;
-  line-height: 1.2em;
+  line-height: 1.4;
   display: inline;
-  margin: 20px 10px 0 0;
+  margin: 10px 10px 0 0;
 }
 
 .comop{
@@ -96,7 +95,10 @@ body{
   float: right;
 }
 }
-
+@media only screen and (max-width : 425px) {
+video{
+  height: 180px;
+}}
 
 #videoDiv {
   width: 100%; height: 360px; position: relative;}
@@ -136,7 +138,7 @@ margin: auto;
     width: 100%;
     padding: 30px;
     background-color: white;
-    height: 540px;
+    height: 800px;
   }
   .lista-nav {
     width: 60%;
@@ -232,7 +234,8 @@ margin-right: -20px;
   transition: all 0.3s;
 }
 .img-princ{
-  margin-top: 59px;
+      right: 0;
+  margin-top: 3%;
   display: block;
   position: absolute;
 }
@@ -284,4 +287,32 @@ width: 55%;
 margin: auto;}
 .formulario-carga{
   background-color: white;
+}
+.fechasr{
+  color: orange;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
+  margin-left: -100px;
+}
+.navbar-brand {
+  font-size: 20px;
+}
+.btn-book2{
+  color: #fff;
+    padding: 15px 30px;
+    font-size: 20px;
+    text-shadow: none;
+    margin-top: 30px;
+    display: inline-block;
+}
+.blog {
+
+}
+.img-como{
+  margin-top: 300px;
+}
+.info{
+  text-align: center;
 }
