--- a/css/booktubers.css
+++ b/css/booktubers.css
@@ -1,5 +1,5 @@
 body{
-  background: url(http://api.thumbr.it/whitenoise-361x370.png?background=4f3882ff&noise=63438e&density=100&opacity=72);
+  background-color: purple;
   font-family: 'Raleway', 'Merriweather','Roboto', sans-serif;
   line-height: 1.2;
 }
@@ -11,6 +11,20 @@ body{
 }
 .slide-logo {
   width: 100%;
+}
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+.video-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .texto-intr{
   width: 100%;
@@ -79,6 +93,7 @@ body{
 }
 
 .comop{
+    min-height: 600px;
   background-color: white;
   color:#503882;
   padding-bottom: 30px;
@@ -138,7 +153,7 @@ margin: auto;
     width: 100%;
     padding: 30px;
     background-color: white;
-    height: 800px;
+    height: 680px;
   }
   .lista-nav {
     width: 60%;
@@ -276,7 +291,7 @@ margin-left: 45px;
 }
 @media (min-width: 2560px){
   .img-princ{
-    left: 18%;
+    float: left;
   }
 }
 @media (min-width: 2560px){
